Modified the Properties

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -9,12 +9,10 @@ browser = chrome
 environment = QA
 
 # QA Environment
-QA_URL = https://rwa-dev.toucanint.com/#/
+QA_URL = https://ops-cands.testtoucanpay.in/#/
+
 QA_userDetails = Automation
 
-# Production Environment
-PROD_URL = https://unitedgates.in/#/
-PROD_userDetails = Automation
 
 ################################
 # OTP / Twilio Credentials
